--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,11 +7,16 @@ font-family: 'Noto Sans', sans-serif;
 font-family: 'Poppins', sans-serif;
 font-family: 'Sura', serif;
 }
+
+body{
+    background: rgb(171,4,11);
+background: linear-gradient(90deg, rgba(171,4,11,1) 0%, rgba(20,12,12,1) 50%, rgba(199,191,192,1) 100%);
+}
    
     .header{
         width: 100%;
         height: 60px;
-        background-color: white;
+        background-color:transparent;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -29,9 +34,9 @@ font-family: 'Sura', serif;
         color: red;
     }
     .header h1{
+
         display: block;
-        color: #f50404;
-        background: #fff;
+        color: white;
         position: relative;
     }
     .container{
@@ -42,62 +47,88 @@ font-family: 'Sura', serif;
     }
     .containerForm{
         text-align: center;
-        width: 400px;
-        height: 200px;
-        border: solid black 1px;
-        background-color: rgba(255, 255, 255, 0.966);
+        color: black;
+        width: 480px;
+        height: 300px;
+        border-radius: 25% 10%;
+        background-color:rgb(235, 237, 239) ;
         opacity: 90%;
         font-size: 11px;
-        margin: 150px 450px;
-        position: absolute;
+        margin: 180px 540px;
+        position: relative;
         display: block;
         /* display: none; */
     }
+    .containerForm h1{
+        font-size: 17px;
+    }
+
     .containerForm input{
         display: flex;
         width: 80%;
+        height: 50px;
         margin: 20px 30px;
+        background: transparent ;
+        border:none;
+        color: black;
     }
     .containerForm button{
         width: 30%;
         margin: 10px 20px;
-        background-color: rgb(255, 0, 0);
+        color: white;
+        background-color: black;
         border: solid black 1px;
         border-radius: 20px;
     }
     
     .containerRegistro{
         text-align: center;
-        width: 400px;
+        width: 450px;
         height: 440px;
-        border: solid black 1px;
-        background-color: rgba(255, 255, 255, 0.753);
+        border-radius: 25% 10%;
+        background-color: rgb(235, 237, 239);
         opacity: 90%;
         font-size: 11px;
-        margin: 10px 450px;
+        margin: 10px 540px;
         position: relative;
         top: 80px;
         display: block;
         display: none;
     }
+
+    .containerRegistro h1{
+        color: black;
+        font-size: 15px;
+        height: 40px;
+    }
+
+    .containerRegistro h2{
+        color: black;
+    }
+
     .containerRegistro input{
         display: block;
         width: 80%;
+        height: 40px;
         margin: 20px 30px;
+        background-color: transparent;
+        color: black;
+        border: none;
     }
     .containerRegistro button{
         width: 50%;
         height: 10%;
-        margin: 10px 20px;
-        background-color: rgb(255, 0, 0);
+        margin: 30px 20px;
+        background-color: black;
+        color: white;
         border: solid black 1px;
         border-radius: 20px;
     }
     .containerItems{
-        width: 90%;
-        height: 500px;
+        width: 80%;
+        height: 600px;
         margin: 10px 60px 0px;
-        background-color: rgba(255, 0, 0, 0.747);
+        background-color: rgba(165, 13, 24);
         display: flex;
         justify-content: center;
         align-items: center;
@@ -110,9 +141,9 @@ font-family: 'Sura', serif;
         right: 0;
     }
     .containerItems section{
-        width: 400px;
-        height: 200px;
-       flex-wrap: wrap;
+        width: 490px;
+        height: 300px;
+        flex-wrap: wrap;
         background-color: rgba(240, 248, 255, 0.425);
         border: solid rgb(235, 232, 232) 2px;
         display: flex;
@@ -130,7 +161,7 @@ font-family: 'Sura', serif;
         transform: scale(0.9);
     }
     .containerItems img{
-        width: 60px;
+        width: 100px;
         height: auto;
     }
     .containerItems button{
@@ -143,4 +174,13 @@ font-family: 'Sura', serif;
         position: relative;
         top: 40%;
         cursor: pointer;
+    }
+    .invalido{
+        border: solid 1px red;
+    box-shadow: 0 0 10px red;
+    }
+    
+    .error{
+        color: red;
+        display: block;
     }
